/*
 * $Id: ChangeLog,v 1.3090 2004/06/18 16:48:02 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-19 01:10 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/files.c
    ! Fixed FILESIZE() to return -1 if the file is not found.
    ! Fixed FILEATTR() to return FA_ARCH on non-MS platforms.
  * contrib/libct/range.c
    ! Fixed RANGEREPL() and RANGEREM() to work with empty strings.

2004-06-18 12:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/tbrowse.prg
    * @ 932 changed Len() back to LenVal() Browsing dates was a problem.
  * include/hbver.h
    * Refreshed.

2004-06-18 15:10 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Code Cleanup.

2004-06-18 15:45 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/mysql/mysql.c
    - rename filelength() to getfilelength()
    - change HB_FUNC(DATATOSQL) & FILETOSQLBINARY() iSize to use ULONG to avoid casting

2004-06-17 22:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/tbrowse.prg
    * slight optimisation.
  * include/hbver.h
    * Refreshed.

2004-06-18 06:40 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Method AColInfo()
      Checking is performed as if <oCol> is really an object, pointed out by Paul Tucker.

2004-06-17 21:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    ! Fixed a long standing issue with how the 'unselected' color is handled
    ! in SetColor().
  * include/hbver.h
    * Refreshed.

2004-06-17 20:19 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * include/hbclass.ch
    ! Add syntax for Visual Objects compatibility.
    Note: See line 351, 373 and 378 for changes.

  * utils/hbmake/hbmake.prg
    ! Fixed to not ask by the main prg if only one prg is selected.
